= Fixed text alignment stuff

--- a/css/pageStyle.css
+++ b/css/pageStyle.css
@@ -4,6 +4,8 @@ body{
 	font-family: Helvetica, sans-serif;
 	line-height:1.6em;
 	margin:0;
+
+	overflow-x: hidden;
 }
 
 
@@ -16,12 +18,15 @@ h1{
 p{
 	font-family: Arial, sans-serif;
 	text-align: justify;
-	margin-left: 30%;
-	margin-right: 30%;
 }
 
 em{
+	text-align: justify;
+}
+
+.container{
 	text-align: center;
+	position: relative;
 }
 
 .header{
@@ -44,10 +49,6 @@ em{
 	text-align: center;
 	padding:20px;
 	margin-top:40px;
-}
-
-.container{
-	text-align: center;
 }
 
 .lineBreak{
@@ -75,15 +76,27 @@ em{
 
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 10px;
-	margin-bottom: : 10px;
+	margin-bottom: 10px;
 
-	width:35%;
-	height: 120px;
+	padding: 5px;
 
-	background: #f2f2f2;
-	color:#333;
-	padding: 10px;
+	min-width: 800px;
+	max-width: 800px;
+}
+
+#projectBox::before{
+	content: "";
+	width: 1px;
+	margin-left: -1px;
+	float: left;
+	height: 0;
+	/*padding-top: 591.44px/1127.34px*100%;*/
+}
+
+#projectBox::after{
+	content: "";
+	display: table;
+	clear: both;
 }
 
 #projectBox h1{
